# FindWiX

./: LICENSE  README.md
cmake/: FindWix.cmake
samples/: CMakeLists.txt
samples/Minimal/: CmakeLists.txt  Main.wxs
samples/WithExecutable/: CMakeLists.txt  Main.cpp  Main.wxs
samples/WithExtension/: CmakeLists.txt  Main.wxs
samples/WithFragment/: CMakeLists.txt  Fragment.wxs  Main.wxs
samples/WithName/: CMakeLists.txt  Main.wxs
